--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -102,7 +102,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ckb|دابەش|tr=dabeş}}
-* Macedonian: {{t|mk|делење|n|tr=délenje|sc=Cyrl}}, {{t|mk|поделба|f|tr=pódelba|sc=Cyrl}}
+* Macedonian: {{t|mk|делење|n}}, {{t|mk|поделба|f}}
 * Malay: {{t|ms|divisi}}, {{t|ms|pembahagian}}
 * Norwegian:
 *: Bokmål: {{t+|nb|divisjon|m}}
@@ -126,7 +126,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 {{trans-top|each of the parts resulting from division}}
 * Afrikaans: {{t+|af|gedeelte}}
 * Armenian: {{t+|hy|բաժին}}, {{t+|hy|բաժանում}}
-* Bulgarian: {{t+|bg|част|f}}, {{t+|bg|раздел|m}}
+* Bulgarian: {{t+|bg|част|f}}, {{t+|bg|разде́л|m}}
 * Czech: {{t+|cs|díl|m}}
 * Dutch: {{t+|nl|deel|n}}, {{t+|nl|gedeelte|n}}
 * Finnish: {{t+|fi|osa}}
@@ -136,13 +136,14 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Kurdish:
 *: Sorani: {{t|ckb|بەش|tr=beş}}
 {{trans-mid}}
-* Macedonian: {{t|mk|дел|m|tr=del|sc=Cyrl}}
+* Macedonian: {{t|mk|дел|m}}
 * Malay: {{t|ms|bahagian}}
-* Malayalam: {{t+|ml|വിഭാഗം|tr=vibhaagam|sc=Mlym}}
+* Malayalam: {{t+|ml|വിഭാഗം}}
 * Persian: {{t+|fa|بخش|tr=baxš|sc=fa-Arab}}
 * Portuguese: {{t+|pt|parte|f}}
 * Quechua: {{t|qu|t'aqa}}
 * Romanian: {{t+|ro|diviziune|f}}, {{t+|ro|parte|f}}
+* Russian: {{t+|ru|часть|f}}, {{t+|ru|разде́л|m}}
 * Spanish: {{t+|es|parte|f}}
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 * Turkish: {{t+|tr|bölüm}}, {{t+|tr|pay}}
@@ -155,7 +156,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Armenian: {{t+|hy|բաժանում}}
 * Bashkir: {{t|ba|бүлеү|sc=Cyrl}}
 * Belarusian: {{t|be|дзяле́нне|n}}
-* Bulgarian: {{t+|bg|деление|n}}
+* Bulgarian: {{t+|bg|деле́ние|n}}
 * Catalan: {{t+|ca|divisió|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|除法|tr=chúfǎ}}
@@ -177,7 +178,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Kurdish:
 *: Sorani: {{t|ckb|دابەش|tr=dabeş}}
 {{trans-mid}}
-* Macedonian: {{t|mk|делење|n|tr=délenje|sc=Cyrl}}
+* Macedonian: {{t|mk|делење|n}}
 * Maori: {{t|mi|whakawehenga}}
 * Norwegian:
 *: Bokmål: {{t+|nb|divisjon|m}}
@@ -209,7 +210,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Afrikaans: {{t+|af|deel}}
 * Armenian: {{t+|hy|բաժանում}}
 * Bashkir: {{t|ba|бүлеү|sc=Cyrl}}
-* Bulgarian: {{t+|bg|деление|n}}
+* Bulgarian: {{t+|bg|деле́ние|n}}
 * Czech: {{t+|cs|dělení|n}}
 * Dutch: {{t+|nl|deling|f}}, {{t+|nl|staartdeling|f}}
 * Finnish: {{t+|fi|jakolasku}}
@@ -218,7 +219,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Greek: {{t+|el|διαίρεση|f}}
 * Kurdish:
 *: Sorani: {{t|ckb|دابەش|tr=dabeş}}
-* Macedonian: {{t|mk|делење|n|tr=délenje|sc=Cyrl}}
+* Macedonian: {{t|mk|делење|n}}
 * Norwegian:
 *: Bokmål: {{t+|nb|divisjon|m}}
 *: Nynorsk: {{t|nn|divisjon|m}}
@@ -241,7 +242,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Arabic: {{t|ar|فِرْقَة|f}}
 * Armenian: {{l|hy|դիվիզիա}}
 * Belarusian: {{t|be|дыві́зія|f}}
-* Bulgarian: {{t|bg|дивизия|f}}
+* Bulgarian: {{t|bg|диви́зия|f}}
 * Catalan: {{t+|ca|divisió|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|師團}}, {{t+|cmn|师团|tr=shītuán}}, {{t+|cmn|師}}, {{t+|cmn|师|tr=shī}}
@@ -260,12 +261,12 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Icelandic: {{t+|is|herdeild|f}}, {{t+|is|deild|f}}
 * Indonesian: {{t+|id|divisi}}
 * Japanese: {{t+|ja|師団|tr=しだん, shidan}}
-* Khmer: {{t|km|កងពលធំ|tr=kong pol thom|sc=Khmr}}
+* Khmer: {{t|km|កងពលធំ}
 {{trans-mid}}
 * Korean: {{t+|ko|사단}}
 * Kurdish:
 *: Sorani: {{t|ckb|فرقە|tr=firqe}}
-* Macedonian: {{t|mk|дивизија|f|tr=divízija|sc=Cyrl}}
+* Macedonian: {{t|mk|дивизија|f}}
 * Maori: {{t|mi|whare}}, {{t|mi|mātua}}
 * Norwegian:
 *: Bokmål: {{t+|nb|divisjon|m}}
@@ -289,7 +290,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 {{trans-top|section of a large company}}
 * Afrikaans: {{t+|af|afdeling}}
 * Armenian: {{t+|hy|բաժին}}
-* Bulgarian: {{t+|bg|подразделение|n}}
+* Bulgarian: {{t+|bg|подразделе́ние|n}}
 * Catalan: {{t+|ca|divisió|f}}
 * Czech: {{t|cs|divize|f}}
 * Dutch: {{t+|nl|afdeling|f}}, {{t+|nl|divisie|f}}, {{t+|nl|eenheid|f}}
@@ -303,13 +304,13 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 *: Sorani: {{t|ckb|بەش|tr=beş}}
 {{trans-mid}}
 * Luxembourgish: {{t|lb|Andeelung|f}}
-* Macedonian: {{t|mk|оддел|m|tr=óddel|sc=Cyrl}}, {{t|mk|одделение|n|tr=otdelénie|sc=Cyrl}}
+* Macedonian: {{t|mk|оддел|m}}, {{t|mk|одделение|n}}
 * Norwegian:
 *: Bokmål: {{t+|nb|divisjon|m}}
 *: Nynorsk: {{t|nn|divisjon|m}}
 * Portuguese: {{t+|pt|divisão|f}}
 * Romanian: {{t+|ro|divizie|f}}
-* Russian: {{t+|ru|отде́л|m}}, {{t+|ru|отделе́ние|n}}, {{t+|ru|се́кция|f}}
+* Russian: {{t+|ru|отде́л|m}}, {{t+|ru|отделе́ние|n}}, {{t+|ru|се́кция|f}}, {{t+|ru|подразделе́ние|n}}
 * Swahili: {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * Telugu: {{t+|te|విభాగము|sc=Telu}}
@@ -321,9 +322,9 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Czech: {{t+|cs|oddělení|f}}
 * Finnish: {{t+|fi|kaari}}, {{t+|fi|pääjakso}}
 * Icelandic: {{t|is|skipting|f}}, {{t+|is|fylking|f}}
-* Khmer: {{t+|km|សាខា|tr=sar khar|sc=Khmr}}
+* Khmer: {{t+|km|សាខា}}
 * Latin: {{t|la|divisio}}
-* Macedonian: {{t|mk|оддел|m|tr=óddel|sc=Cyrl}}
+* Macedonian: {{t|mk|оддел|m}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|divisão|f}}
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
@@ -336,7 +337,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Finnish: {{t+|fi|erimielisyys}}
 * Greek: {{t+|el|διχόνοια|f}}, {{t+|el|διχασμός|m}}
 * Irish: {{t|ga|deighilt|f}}
-* Macedonian: {{t|mk|поделеност|f|tr=podélenost|sc=Cyrl}}
+* Macedonian: {{t|mk|поделеност|f}}
 {{trans-mid}}
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 * Turkish: {{t+|tr|anlaşmazlık}}
