--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -6,7 +6,7 @@
 * {{l|en|weazel}} {{qual|archaic}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|wesele}}, from {{etyl|ang|en}} {{m|ang|weosule|}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*wisulǭ}} (compare {{cog|fy|wezeling|}}, {{cog|nds|Wessel}}, {{m|nds|Wissel}}, {{cog|nl|wezel|}}, {{cog|de|Wiesel|}}, {{cog|sv|vessla}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*wiselos}} (compare [[Irish]] {{m|ga|fíal}} “ferret”), from {{m|ine-pro|*wis-||musk, stink}}. Compare {{cog|la|virus||slimy liquid, mud; stench}}, {{cog|sa|विस्र||musty, smelling of raw meat}}.
+From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*wisulǭ}}.
 
 The verb comes from the supposed [[cunningness]] of the weasel.
 
