--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -12,7 +12,7 @@
 * {{homophones|lang=en|martin|Martin}} {{qualifier|in some accents}}
 
 ===Etymology 1===
-From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} {{m|fro|martrine||marten fur}}, from {{etyl|odt|en}} {{m|odt|*marthrin||of marten fur}} (compare {{cog|dum|martren}}), from {{m|odt|*marthra||marten}} (compare {{cog|nl|marter}}), from {{etyl|gem-pro|en}} {{m|gem-pro|*marþuz}} (compare Low German {{m|nds|Mort}}, West Frisian {{m|fy|murd||polecat}}, {{cog|ang|mearþ||shrew}}, {{cog|de|Marder|t=marten}}), originally 'wedding' (compare {{cog|gme-cgo||marzus|wedding}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*martus||bride}}. More at [[marry]]. For sense development, compare {{cog|it|donnola||weasel}}, from {{m|it|donna||lady}}, and {{etyl|el|en}} {{m|el|νυφίτσα}} ("weasel"), from {{m|el|νύμφη}} ("bride").
+From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||marten fur}}, from {{der|en|odt|*marthrīn||of marten fur}}, from {{m|odt|*marthar||marten}}. Displaced {{noncog|ang|mearþ}}, from {{noncog|gem-pro|*marþuz}}.
 
 ====Noun====
 {{en-noun}}
