--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -18,7 +18,7 @@
 *: Hakka: {{t|hak|撒母耳記下|sc=Hani}}, {{t|hak|撒母耳记下|tr=Sat-mû-ngí-ki Ha|sc=Hani}}
 *: Mandarin: {{t+|cmn|撒母耳記下|sc=Hani}}, {{t+|cmn|撒母耳记下|tr=Sǎmǔ'ěrjì Xià|sc=Hani}}, {{t|cmn|撒慕爾紀下|sc=Hani}}, {{t|cmn|撒慕尔纪下|tr=Sǎmù'ěrjì Xià|sc=Hani}} {{qualifier|Catholic}}
 *: Min Nan: {{t|nan|撒母耳記下卷|sc=Hani}}, {{t|nan|撒母耳记下卷|tr=Sat-bó͘-ní Kì Hā-koàn, Sat-bó͘-jí Kì Hā-koàn|sc=Hani}}, {{t|nan|撒母耳記下|sc=Hani}}, {{t|nan|撒母耳记下|tr=Sat-bó͘-ní Kì Hā, Sat-bó͘-jí Kì Hā|sc=Hani}}, {{t|nan|撒慕爾紀下}}, {{t|nan|撒慕尔纪下|tr=Sat-bō͘-ní-kí hā}} {{qualifier|Catholic}}
-* French: {{t|fr|2 Samuel}}
+* French: {{t|fr|2 Samuel|m}}
 * German: {{t|de|2 Samuel}}
 {{trans-mid}}
 * Greek: {{t|el|Β' Σαμουήλ}}
@@ -31,6 +31,17 @@
 {{trans-bottom}}
 
 [[Category:English terms spelled with 2]]
+
+----
+
+==French==
+
+===Proper noun===
+{{fr-proper-noun|g=m}}
+
+# {{lb|fr|bible}} {{l|en|2 Samuel}}
+
+[[Category:fr:Books of the Bible]]
 
 ----
 
