--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -55,6 +55,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Bulgarian: {{t|bg|тече кръв}}
 * Catalan: {{t+|ca|sagnar}}
 * Chinese:
+*: Cantonese: {{t|yue|流血|tr=lau4 hyut3}}
 *: Mandarin: {{t+|cmn|出血|tr=chūxiě}}, {{t+|cmn|流血|tr=liúxuè, liúxiě}}, {{t+check|cmn|放血|tr=fàngxuè|sc=Hani}}
 * Czech: {{t|cs|krvácet}}
 * Danish: {{t+|da|bløde}}
