/* Afrikaans */ fixed a typo: chemisty -> chemistry <alkalies#50611779>

--- a/en/a/alkalies.856066.wikitext
+++ b/en/a/alkalies.856066.wikitext
@@ -18,4 +18,4 @@
 ===Adjective===
 {{af-adj||meer alkalies|mees alkaliese}}
 
-# {{lb|af|chemisty}} {{l|en|alkaline}}
+# {{lb|af|chemistry}} {{l|en|alkaline}}
