t+nl:[[flik]] t+nl:[[smeris]] ([[WT:EDIT|Assisted]]) <cop#50617415>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -80,7 +80,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 *: Mandarin: {{t+|cmn|条子|tr=tiáozǐ |sc=Hani}}
 * Czech: {{t+|cs|polda|m}}, {{t+|cs|policajt|m}}, {{t+|cs|bachař|m}}
 * Danish: {{t|da|panser|c}}, {{t|da|strisser|c}}, {{t|da|strømer|c}}
-* Dutch: {{t+|nl|diender|m}}
+* Dutch: {{t+|nl|diender|m}}, {{t+|nl|flik|m}}, {{t+|nl|smeris|m}}
 * Estonian: {{t|et|ment}}
 * Finnish: {{t+|fi|pollari}}, {{t+|fi|kyttä}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}}, {{t+|fr|poulet|m}}, {{t+|fr|police|f}} {{qualifier|Quebec}}
