/* German */ Nobody says it "smolltock", maybe "smolltohk", but even that would be very rare. Germans have no difficulty saying a long open "o". <Smalltalk#50618224>

--- a/en/s/Smalltalk.775101.wikitext
+++ b/en/s/Smalltalk.775101.wikitext
@@ -20,11 +20,14 @@
 Borrowed from {{bor|de|en|small talk}}.
 
 ===Pronunciation===
-* {{IPA|lang=de|/ˈsmɔltɔk/}}
+* {{IPA|lang=de|/ˈsmɔːlˌtɔːk/|/ˈsmɔlˌtoːk/}}
 
 ===Noun===
 {{de-noun|m|g2=n||Smalltalks}}
 
 # [[small talk]]
+
+====Usage notes====
+* Generally masculine; the neuter is very rare.
 
 [[Category:de:Talking]]
