not "shortening of [[hello there]]" but see [[ho]] -- call for attention. Mickey Mouse usage is a nonce wordplay hey/hi/ho <ho there#50618262>

--- a/en/h/ho there.801729.wikitext
+++ b/en/h/ho there.801729.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Phrase===
-{{head|en|phrase}}
-# Shortening of [[hello there]].
-#: ''[[hey there|Hey there]], [[hi there]], '''ho there'''! You're as welcome as can be! [[Mickey Mouse|M-I-C-K-E-Y M-O-U-S-E]]!''
+{{en-phrase}}
+
+# A call for attention.
