--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -221,6 +221,10 @@ From {{der|en|enm|beden}}, from the {{der|en|ang|-}} verb {{m|ang|bēodan||offer
 {{trans-mid}}
 {{trans-bottom}}
 
+{{trans-top|attempt, effort, or pursuit (of a goal)}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===References===
 <references/>
 
