--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -173,7 +173,7 @@ From {{der|ca|la|ructus}}.
 * {{audio|Nl-rot.ogg|Audio|lang=nl}}
 
 ===Etymology 1===
-{{rfe|nl}}
+{{rfe;ite|nl}}
 
 ====Adjective====
 {{nl-adj|rotter}}
