--- a/en/c/count down.856261.wikitext
+++ b/en/c/count down.856261.wikitext
@@ -37,6 +37,7 @@
 * French: {{t+|fr|décompter}}
 {{trans-mid}}
 * German: {{t-needed|de}}
+* Japanese: {{t+|ja|秒読み|alt=秒読みする|tr=byōyomi suru}}
 * Polish: {{t|pl|odliczać}}
 * Portuguese: {{t|pt|contar os dias}}
 * Spanish: {{t-needed|es}}
