t+uk:[[байбак]] t+fa:[[مارموت]] t+ar:[[مرموط]] t+th:[[มาร์มอต]] ([[WT:EDIT|Assisted]]) <marmot#50629332>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -38,7 +38,7 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 ====Translations====
 {{trans-top|rodent of the genera Marmota}}
 * Albanian: {{t|sq|marmota}}
-* Arabic: {{t-needed|ar}}
+* Arabic: {{t|ar|مَرْمُوط|m}}
 * Armenian: {{t|hy|արջամուկ}}
 * Basque: {{t+|eu|marmota}}
 * Belarusian: {{t|be|суро́к}}
@@ -78,7 +78,7 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 * Navajo: {{t|nv|dilchaʼ}}
 * Norwegian: {{t|no|murmeldyr}}
 * Occitan: {{t+|oc|marmòta}}, {{t|oc|muret}}
-* Persian: {{t-needed|fa}}
+* Persian: {{t|fa|مارموت|tr=mârmut}}
 * Polish: {{t+|pl|świstak}}, {{t|pl|świszcz|m}}
 * Portuguese: {{t+|pt|marmota|f}}
 * Romanian: {{t+|ro|marmotă|f}}
@@ -93,9 +93,10 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 * Slovene: {{t+|sl|svizec|m}}
 * Spanish: {{t|es|marmota|f}}
 * Swedish: {{t|sv|murmeldjur}}
+* Thai: {{t|th|มาร์มอต}}
 * Tibetan: {{t|bo|ཕྱི་བ}}
 * Turkish: {{t+|tr|dağ sıçanı}}
-* Ukrainian: {{t+|uk|бабак}}
+* Ukrainian: {{t+|uk|бабак}}, {{t|uk|байба́к|m}}
 * Upper Sorbian: {{t|hsb|bobak}}
 * Welsh: {{t|cy|twrlla}}, marmot
 * West Frisian: {{t|fy|bargemot}}, marmot
