--- a/en/o/oidium.746075.wikitext
+++ b/en/o/oidium.746075.wikitext
@@ -5,7 +5,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|LL.|en}}, from {{etyl|grc|en}} {{m|grc|ᾠόν||egg}} {{suffix||ium|lang=en}}
+From {{bor|en|LL.|oidium}}, from {{der|en|grc|ᾠόν||egg}} {{suffix||ium|lang=en}}
 
 ===Noun===
 {{en-noun|oidia}}
