define as noun <hander#50629873>

--- a/en/h/hander.4308.wikitext
+++ b/en/h/hander.4308.wikitext
@@ -9,7 +9,7 @@
 
 # One who hands over or transmits; a conveyor in succession
 #: {{rfquotek|John Dryden}}
-# {{qualifier|in combinations}} Having, using, or requiring, a certain hand, or number of [[hand]]s
+# {{qualifier|in combinations}} Something having, using, or requiring, a certain hand, or number of [[hand]]s
 #* {{quote-book
 |year=2010
 |author=Chris Lewit
