--- a/en/a/aanbidden.4464.wikitext
+++ b/en/a/aanbidden.4464.wikitext
@@ -1,11 +1,12 @@
 ==Dutch==
 
 ===Etymology===
-From {{affix|nl|aan-|bidden}}.
+From {{inh|Nl|aenbidden}}. Equivalent to {{affix|nl|aan-|bidden}}.
 
 ===Pronunciation===
 * {{IPA|/aːmˈbɪdə(n)/|lang=nl}}
 * {{audio|Nl-aanbidden.ogg|audio|lang=nl}}
+* {{hyphenation|lang=nl|aan|bid|den}}
 
 ===Verb===
 {{nl-verb}}
@@ -16,4 +17,6 @@ From {{affix|nl|aan-|bidden}}.
 {{nl-conj-st|class=5|pref=aan|bid|bad|beden|bidde|bade|baadt}}
 
 ====Derived terms====
+* {{l|nl|aanbidder}}
 * {{l|nl|aanbidding}}
+* {{l|nl|aanbidster}}
