--- a/en/a/aanbidden.4464.wikitext
+++ b/en/a/aanbidden.4464.wikitext
@@ -1,7 +1,7 @@
 ==Dutch==
 
 ===Etymology===
-From {{inh|Nl|aenbidden}}. Equivalent to {{affix|nl|aan-|bidden}}.
+From {{inh|nl|dum|aenbidden}}. Equivalent to {{affix|nl|aan-|bidden}}.
 
 ===Pronunciation===
 * {{IPA|/aːmˈbɪdə(n)/|lang=nl}}
