t+eo:[[klini]] ([[WT:EDIT|Assisted]]) <bend#50646956>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -72,7 +72,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * Classical Nahuatl: {{t|nci|cuēloā}}, {{t|nci|cuelpachoā}}
 * Czech: {{t+|cs|ohnout}}
 * Dutch: {{t+|nl|buigen}}, {{t+|nl|plooien}}
-* Esperanto: {{t|eo|kurbigi}}, {{t+|eo|fleksi}}
+* Esperanto: {{t|eo|kurbigi}}, {{t+|eo|fleksi}}, {{t+|eo|klini}}
 * Finnish: {{t+|fi|taivuttaa}}
 * French: {{t+|fr|courber}}
 * Georgian: {{t|ka|მოხრა}}
