--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -22,7 +22,7 @@
 * Italian: {{t+|it|sul serio}}, {{t+|it|seriamente}}, {{t|it|scherzi a parte}}
 * Portuguese: {{t|pt|não brinca}}
 * Russian: {{t+|ru|неуже́ли?}}
-* Spanish: {{t+|es|no me digas}}
+* Spanish: {{t+|es|¿en serio?}}
 * Swedish: {{t+|sv|se där}}, {{t+|sv|jaha}}, {{t+|sv|jaså}}
 {{trans-bottom}}
 
