--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -77,7 +77,7 @@ Borrowed from {{bor|en|es|Oaxaca}}, from {{der|en|nci|Huāxacac}}, from {{m|nci|
 Borrowed from {{der|es|nci|Huāxacac}}, from {{m|nci|Huāxacatzin|t=name of a hill}}, from {{m|nci|huāxin|t=a type of tree}} + {{m|nci|yacatl|t=nose}} + {{m|nci|-tzin|t=honorific suffix}}.
 
 ===Pronunciation===
-* {{rhymes|a|lang=es}}
+* {{es-IPA|Huajaca}}
 
 ===Proper noun===
 {{es-proper noun|f}}
