--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -85,6 +85,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 {{trans-top|back to a former place or state}}
 * Bashkir: {{t|ba|кире}}
 * Dutch: {{t+|nl|weer}}, {{t+|nl|weder}}
+* Finnish: {{t+|fi|jälleen}}, {{t+|fi|uudestaan}}, {{t|fi|ennalleen}}
 * German: {{t+|de|wieder}}, {{t+|de|zurück}}
 * Low German:
 *: German Low German: {{t+|nds-de|wedder}}; {{t|nds-de|wier}} {{q|Paderbornisch}}
