--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -138,6 +138,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 {{trans-mid}}
 * Ladin: {{t|lld|peis|m}}
 * Lao: {{t|lo|ນ້ຳໜັກ}}, {{t|lo|ນ້ຳຫນັກ}}
+* Latin: {{t|la|pondus|n}}
 * Latvian: {{t|lv|svars|m}}
 * Lithuanian: {{t+|lt|svoris|m}}
 * Luxembourgish: {{t|lb|Gewiicht|n}}
