--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -205,7 +205,7 @@ Not productive in modern Japanese.  Not found in isolation.
 
 /tuki<sub>2</sub>/ → *{{IPAchar|/tukwi/}} → *{{IPAchar|/t͡sukwi/}} → {{IPAchar|/t͡suki/}}
 
-From {{inh|ja|ojp|月|tr=tuki<sub>2</sub>}} (cf. phonetic Man'yōgana forms {{ltc-l|都奇|id=1,2}} and {{ltc-l|追奇|id=1,2}}) , from {{inh|ja|jpx-pro|*tukui}}. Cognate with {{cog|jpx-ryu-pro|*tuki}}, whence {{cog|ams|てぃき|tr=tɨkˀi}}, {{cog|xug|しちゅー|tr=ɕitɕuː}}, {{cog|ryu|ちち|tr=tɕitɕi}}, {{cog|mvi|つき|tr=tsɿkɿ}}, {{cog|rys|つぃくぃ|tr=tsɨkˢɨ}} and {{cog|yoi|てぃー|tr=tˀiː}}.
+From {{inh|ja|ojp|月|tr=tuki<sub>2</sub>}} (cf. phonetic Man'yōgana forms {{ltc-l|都奇|id=1,2}} and {{ltc-l|追奇|id=1,2}}) , from {{inh|ja|jpx-pro|*tukui}}. Cognate with {{cog|jpx-ryu-pro|*tuki}}, whence {{cog|ams|てぃき|tr=tɨkˀi}}, {{cog|xug|しちゅー|tr=ɕitɕuː}}, {{cog|ryu|ちち|tr=tɕitɕi}}, {{cog|mvi|つきぃ|tr=tsɿkɿ}}, {{cog|rys|つぃくぃ|tr=tsɨkˢɨ}} and {{cog|yoi|てぃー|tr=tˀiː}}.
 Likely a shift from {{ja-l|月#Etymology_1_2|つく}} above, derived through a fusion with ancient Japanese emphatic nominal particle {{ja-r|い}}.  Compare the development of {{m|ja|神|tr=kami}} from older combining form ''kamu''.<ref name="Perard 2012">{{cite-web|first=Thomas|last=Pellard|title=日琉祖語の分岐年代
 |work=琉球諸語と古代日本語に関する比較言語学的研究」ワークショップ|year=2012|url=http://kikigengo.jp/nishihara/lib/exe/fetch.php?media=library:references:rkoj-pellard.pdf|page=6}}</ref>
 
