--- a/en/m/moneygrubber.720248.wikitext
+++ b/en/m/moneygrubber.720248.wikitext
@@ -8,7 +8,7 @@
 ===Noun===
 {{en-noun}}
 
-# An [[avaricious]] person.
+# A person who is [[avariciously]] and [[greedily]] intent on accumulating [[money]].
 
 ====Related terms====
 * {{l|en|money-grubbing}}
