--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -2,7 +2,7 @@
 [[Image:Marbled polecat.jpg|thumb|right|A [[marbled polecat|marbled '''polecat''']] (weasel-like animal).]]
 
 ===Etymology===
-From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its fondness for poultry.
+From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. Origin unknown, possible explanations include its fondness for poultry, or the Old English word fol, "foul", because of its smell. The same species was also known as folmart, "foul martin".
 
 ===Pronunciation===
 * {{IPA|/ˈpəʊlkæt/|lang=en}}
