--- a/en/m/myocyte.742099.wikitext
+++ b/en/m/myocyte.742099.wikitext
@@ -16,7 +16,7 @@
 * {{l|en|myocytic}}
 * {{l|en|myocytoma}}
 * [[neomyocyte]]
-* [[rhabdomyocyte]]
+* [[habdomyocyte]]
 
 ====Translations====
 {{trans-top|a single muscle fiber cell}}
