Reverted edits by [[Special:Contributions/103.60.160.212|103.60.160.212]]. If you think this rollback is in error, please leave a message on my talk page. <myocyte#50672455>

--- a/en/m/myocyte.742099.wikitext
+++ b/en/m/myocyte.742099.wikitext
@@ -16,7 +16,7 @@
 * {{l|en|myocytic}}
 * {{l|en|myocytoma}}
 * [[neomyocyte]]
-* [[habdomyocyte]]
+* [[rhabdomyocyte]]
 
 ====Translations====
 {{trans-top|a single muscle fiber cell}}
