/* Pronunciation */Fixed typo <dowing#50676737>

--- a/en/d/dowing.746917.wikitext
+++ b/en/d/dowing.746917.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/ˈdaʊɪŋ/|lang=en}}
+* {{IPA|/ˈdoʊɪŋ/|lang=en}}
 
 ===Verb===
 {{head|en|present participle}}
