--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -127,8 +127,9 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Galician: {{t+|gl|pentagrama|m}}
 * German: {{t|de|Notenlinien|f-p}}
 * Greek: {{t+|el|πεντάγραμμο|n}}
-* Italian: {{t+|it|pentagramma|m}}, {{t+|it|rigo|m}}
+* Hungarian: {{t|hu|kottavonal}}
 {{trans-mid}}
+* Italian: {{t+|it|pentagramma|m}}, {{t+|it|rigo|m}}
 * Japanese: {{t|ja|譜表|tr=fuhyō|sc=Jpan}}, {{t|ja|五線|tr=gosen|sc=Jpan}}
 * Macedonian: {{t|mk|петолиние|n|tr=petolínie}}
 * Maori: {{t|mi|tārawa}}
