t+hu:[[vezérkar]] t+hu:[[törzskar]] ([[WT:EDIT|Assisted]]) <staff#50676999>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -196,6 +196,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * German: {{t+|de|Stab|m}}
 {{trans-mid}}
 * Hebrew: {{t+|he|מטה|m|tr=maté}}
+* Hungarian: {{t+|hu|vezérkar}}, {{t+|hu|törzskar}}
 * Ukrainian: {{t|uk|штаб}}
 {{trans-bottom}}
 
