--- a/en/p/prepartum.776902.wikitext
+++ b/en/p/prepartum.776902.wikitext
@@ -9,4 +9,4 @@
 # Before giving [[birth]]; [[prenatal]].
 
 ====Antonyms====
-* {{sense|before giving birth}} {{l|en|postpartum}}
+* {{sense|after giving birth}} {{l|en|postpartum}}
