added [[Category:en:Hemipterans]] using [[Help:Gadget-HotCat|HotCat]] <phylloxera#50693728>

--- a/en/p/phylloxera.746072.wikitext
+++ b/en/p/phylloxera.746072.wikitext
@@ -32,3 +32,4 @@ From the original, superseded genus name {{m|mul|Phylloxera}}, {{etyl|NL.|en}}, 
 * {{pedialite}}
 
 [[Category:English words prefixed with phyllo-]]
+[[Category:en:Hemipterans]]
