t+pa:[[ਵਸਤੂ]] t+ne:[[वस्तु]] t+ps:[[شى]] t+ps:[[څيز]] ([[WT:EDIT|Assisted]]) <thing#50712631>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -178,16 +178,18 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Mirandese: {{t|mwl|cousa|f}}
 * Mongolian: {{t+|mn|зүйл|sc=Cyrl}}, {{t+|mn|юм|sc=Cyrl}}
 * Mwani: {{t|wmw|kinu}}
-* Nepali: {{t-needed|ne}}
+* Nepali: {{t|ne|वस्तु|f}}
 * Norwegian: {{t+|no|ting|m}}, {{t|no|dings|m}}, {{t+|no|greie|f}}
 *: Nynorsk: {{t|nn|ting|m}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|вещь|f}}
 * Old English: {{t|ang|þing|n}}
 * Pali: {{t|pi|vatthu|n}}
+* Pashto: {{t|ps|شى|m|tr=šay}}, {{t|ps|څيز|m|tr=ciz}}
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
 * Polish: {{t+|pl|rzecz|f}}, {{t+|pl|coś|n}}
 * Portuguese: {{t+|pt|coisa|f}}, {{t+|pt|cousa|m}}
+* Punjabi: {{t|pa|ਵਸਤੂ|f}}
 * Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}, {{t+|ro|obiect|n}}
 * Russian: {{t+|ru|вещь|f}}, {{t+|ru|не́что|n}}, {{t+|ru|предме́т|m}}
 * Rwanda-Rundi: {{t|rw|ikintu|c7|c8}}
