--- a/en/i/inextinguishable.742115.wikitext
+++ b/en/i/inextinguishable.742115.wikitext
@@ -11,6 +11,12 @@
 
 # Incapable of being [[extinguish]]ed, not [[inextinguishable]].
 
+====Synonyms====
+* {{l|en|unquenchable}}
+
+====Antonyms====
+* {{l|en|extinguishable}}
+
 ====Translations====
 {{trans-top|incapable of being extinguished}}
 * Armenian: {{t+|hy|անշեջ}}
@@ -21,6 +27,3 @@
 * Portuguese: {{t+|pt|inextinguível}}, {{t|pt|inapagável}}
 * Spanish: {{t+|es|inextinguible}}, {{t+|es|inapagable}}
 {{trans-bottom}}
-
-====Antonyms====
-* {{l|en|extinguishable}}
