t+gl:[[burbullar]] ([[WT:EDIT|Assisted]]) <bubble#50752297>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -331,6 +331,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Esperanto: {{t|eo|bobeli}}
 * Finnish: {{t+|fi|kuplia}}, {{t|fi|poreilla}}, {{t|fi|porista}}
 * French: {{t+|fr|bouillonner}}
+* Galician: {{t+|gl|burbullar}}
 * German: {{t+|de|blubbern}}
 * Greek: {{t+|el|χοχλάζω}}
 *: Ancient Greek: {{t|grc|παφλάζω}}
