--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -23,7 +23,7 @@
 * French: {{t+|fr|quadrilliard}}
 * German: {{t+|de|Quadrilliarde}}
 * Italian: {{t|it|quatriliardo}}
-* Japanese: {{t|ja|千秭|tr=せんし, senshi|sc=Jpan}}
+* Japanese: {{t|ja|千秭|tr= せんじょ，senjo/せんし, senshi|sc=Jpan}}
 * Malay: {{t|ms|oktilion}}
 {{trans-mid}}
 * Polish: {{t+|pl|kwadryliard|m}}
