--- a/en/d/DVD-R.26220.wikitext
+++ b/en/d/DVD-R.26220.wikitext
@@ -1,8 +1,7 @@
 {{also|DVD+R}}
 ==English==
 
-===Initialism===
-{{rfc-header|Initialism}}
-{{head|en|initialism}}
+===Noun===
+{{en-noun}}
 
-# {{w|Digital Versatile Disc}} [[recordable]]. A form of digital media that is similar to a CD, but has far denser storage and thus greater capacity. It can only be written to once, but it can be read from an indefinite number of times.
+# {{initialism of|{{w|Digital Versatile Disc}} [[recordable]]|lang=en|dot=}}: a form of digital media that is similar to a CD, but has far denser storage and thus greater capacity. It can only be written to once, but it can be read from an indefinite number of times.
