/* Old High German */ <thing#50998475>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -414,6 +414,9 @@ From {{inh|odt|gem-pro|*þingą}}.
 ----
 ==Old High German==
 
+===Alternative forms===
+* {{l|goh|[[ding]], [[dink]]}}
+
 ===Etymology===
 From {{inh|goh|gem-pro|*þingą}}
 
@@ -427,6 +430,7 @@ From {{inh|goh|gem-pro|*þingą}}
 {{goh-decl-noun-a-n|ding}}
 
 ----
+
 ==Old Saxon==
 
 ===Etymology===
