--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -427,7 +427,7 @@ From {{inh|goh|gem-pro|*þingą}}
 # [[matter]], [[case]]
 
 ====Declension====
-{{goh-decl-noun-a-n|ding}}
+{{goh-decl-noun-a-n|thing}}
 
 ----
 
