--- a/en/p/pariente.4512.wikitext
+++ b/en/p/pariente.4512.wikitext
@@ -1,7 +1,7 @@
 ==Asturian==
 
 ===Etymology===
-From {{etyl|la|ast}} {{m|la|parēns}}, ''parentis''.
+From {{inh|ast|la|parentem}}, accusative singular of {{m|la|parēns}}.
 
 ===Adjective===
 {{head|ast|adjective}}
@@ -31,7 +31,7 @@ From {{etyl|la|ast}} {{m|la|parēns}}, ''parentis''.
 ==Spanish==
 
 ===Etymology===
-From {{etyl|la|es}} {{m|la|parēns}}, ''parentis''.
+From {{inh|es|osp|pariente}}, from {{inh|es|la|parentem}}, accusative singular of {{m|la|parēns}}.
 
 ===Noun===
 {{es-noun|mf}}
