--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -297,6 +297,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * German: {{t+|de|Kurve|f}}, {{t+|de|Biegung|f}}
 * Greek: {{t+|el|στροφή|f}}
 * Italian: {{t+|it|curva|f}}
+* Lithuanian: {{t|lt|vingis|m}}
 * Maori: {{t|mi|hawe}} {{qualifier|in a track, road, or river}}, {{t|mi|hawhe}} {{qualifier|in a fenceline}}, {{t|mi|whawhe}} {{qualifier|in a fenceline}}, {{t|mi|noninga}} {{qualifier|in a river}}
 * Ngarrindjeri: {{t|nay|tagalang}}
 * Norwegian:
