/* Translations */ fa translit. <gamble#51008653>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -39,7 +39,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Japanese: {{t|ja|賭け|tr=かけ, kake|sc=Jpan}}, {{t+|ja|ギャンブル|tr=gyanburu|sc=Jpan}}
 * Macedonian: {{t|mk|коцка|f|tr=kócka}}, {{t|mk|комар|m|tr=kómar}}
 * Malay: {{t|ms|taruhan}}
-* Persian: {{t+|fa|قمار|tr=ghomâr|sc=fa-Arab}}
+* Persian: {{t+|fa|قمار|tr=qomâr}}
 * Polish: {{t+|pl|hazard|m}}
 * Portuguese: {{t+|pt|aposta|f}}
 * Russian: {{t+|ru|аза́ртная игра́|f}}, {{t+|ru|авантю́ра|f}}
