--- a/en/b/befallen.6783.wikitext
+++ b/en/b/befallen.6783.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/bɪˈfɑlən/|lang=en}}
+* {{IPA|/bɪˈfɔlən/|lang=en}}
 
 ===Verb===
 {{head|en|past participle|cat2=irregular past participles}}
