Added the Shakespeare quote <genet#51030866>

--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -71,7 +71,8 @@ See {{m|en|jennet}}.
 {{en-noun}}
 
 # A small-sized, well-proportioned, [[Spanish]] [[horse]]; a [[jennet]].
-#: {{rfquotek|Shakespeare}}  Shakespeare, ''Othello'': Act 1, Scene 1:112-113
+#:{{rfquotek|Shakespeare}} 
+#:"Iago: Because we come to do you service and you think we are ruffians, you’ll have your daughter covered with a Barbary horse. You’ll have your nephews neigh to you. You’ll have coursers for cousins and gennets for germans." Shakespeare, ''Othello'': Act 1, Scene 1:109-113
 
 ===Anagrams===
 * {{anagrams|en|a=eegnt|tenge}}
