===Noun=== {{en-noun|~}}  # The act of gathering mushrooms. # Rapid or explosive growth. # The formation of a mushroom-like shape. <mushrooming#51044323>

--- a/en/m/mushrooming.746868.wikitext
+++ b/en/m/mushrooming.746868.wikitext
@@ -4,3 +4,10 @@
 {{head|en|present participle}}
 
 # {{present participle of|mushroom|lang=en|nocat=1}}
+
+===Noun===
+{{en-noun|~}}
+
+# The act of gathering mushrooms.
+# Rapid or explosive growth.
+# The formation of a mushroom-like shape.
