--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -21,33 +21,33 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 # {{lb|en|intransitive}} To become [[curve]]d. <!--activity,accomplishment-->
 #: ''Look at the trees '''bending''' in the wind.''
 # {{lb|en|transitive}} To cause to change direction.
-#* {{rfdatek|John Milton}}
+#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|John Milton}}
 #*: '''Bend''' thine ear to supplication.
-#* {{rfdatek|William Shakespeare}}
+#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|William Shakespeare}}
 #*: Towards Coventry '''bend''' we our course.
-#* {{rfdatek|Walter Scott}}
+#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|Walter Scott}}
 #*: '''bending''' her eyes {{...}} upon her parent
 # {{lb|en|intransitive}} To change direction. <!--state,activity-->
 #: ''The road '''bends''' to the right''
 # {{lb|en|intransitive}} To be inclined; to direct itself.
-#* {{rfdatek|John Milton}}
+#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|John Milton}}
 #*: to whom our vows and wishes '''bend'''
 # {{lb|en|intransitive|usually|with "down"}} To [[stoop]].
 #: ''He '''bent''' down to pick up the pieces.''
 # {{lb|en|intransitive}} To [[bow]] in prayer, or in token of submission.
-#* {{rfdatek|Samuel Taylor Coleridge}}
+#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|Samuel Taylor Coleridge}}
 #*: Each to his great Father '''bends'''.
 # {{lb|en|transitive}} To force to submit. <!--accomplishment,achievement-->
 #: ''They '''bent''' me to their will.''
-#* {{rfdatek|William Shakespeare}}
+#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page [or act, scene, line], url}} {{w|William Shakespeare}}
 #*: except she '''bend''' her humour
 # {{lb|en|intransitive}} To submit.<!--state?,activity-->
 #: ''I am '''bending''' to my desire to eat junk food.''
 # {{lb|en|transitive}} To apply to a task or purpose.<!--state?,activity-->
 #: ''He '''bent''' the company's resources to gaining market share.''
-#* {{rfdatek|Temple}}
+#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|Temple}}
 #*: to '''bend''' his mind to any public business
-#* {{rfdatek|Alexander Pope}}
+#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|Alexander Pope}}
 #*: when to mischief mortals '''bend''' their will
 # {{lb|en|intransitive}} To apply oneself to a task or purpose.<!--state?,activity-->
 #: ''He '''bent''' to the goal of gaining market share.''
@@ -272,7 +272,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 # {{lb|en|heraldiccharge}} One of the [[honourable]] [[ordinary|ordinaries]] formed by two [[diagonal]] [[line]]s drawn from the [[dexter chief]] to the [[sinister base]]; it generally occupies a [[fifth]] part of the [[shield]] if [[uncharged]], but if [[charged]] one [[third]].
 #* {{quote-book|year=1968|author=Charles MacKinnon of Dunakin|title=The Observer's Book of Heraldry|pages=63-64|passage=Perhaps the most celebrated coat of arms is that of Scrope, which is Azure a '''bend''' Or. This is the coat over which, from 1385 to 1390, Sir Robert le Grosvenor and Sir Richard le Scrope invoked the High Court of Chivalry to decide which of them had the right to bear these arms. Chaucer gave evidence before the court. In the end the arms were awarded to Scrope, and Grosvenor was ordered to difference with a bordure Argent. This he disdained to do, and being highly dissatisfied with the verdict he appealed to Richard II who altered the decision of the court by refusing to allow the '''bend''' to Grosvenor ''at all''! Grosvenor then adopted a garb, or sheaf of corn.}}
 # {{lb|en|obsolete}} Turn; purpose; inclination; ends.
-#* {{rfdatek|Fletcher}}
+#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page (or act, scene, line), url, full name of author}} {{w|Fletcher}}
 #*: Farewell, poor swain; thou art not for my '''bend'''.
 # In the leather trade, the best quality of [[sole]] [[leather]]; a [[butt]].
 # {{lb|en|mining}} Hard, [[indurated]] [[clay]]; [[bind]].
