--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -238,6 +238,7 @@ From {{inh|non|gem-pro|*meganą}}, {{m|gem-pro|*maganą}}.
 * {{desctree|gmq-osw|magha}}
 * {{desc|da|måtte}}
 * {{desc|no|måtte}}, {{l|no|må}}, {{l|no|umage}}
+* {{desc|gmq-bot|mått}}, {{l|gmq-bot|må}}, {{l|gmq-bot|omaga}}
 
 ===References===
 * {{R:Zoega}}
