/* Noun */ Added quotations <dame#51050973>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -22,6 +22,8 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of 
 #* {{quote-book|author=Guy Wetmore Carryl|authorlink=Guy Wetmore Carryl|chapter=|title=The Lieutenant-Governor: A Novel|location=Boston, Mass.; New York, N.Y.|publisher=[[w:Houghton Mifflin Harcourt|Houghton, Mifflin and Company]]; [[w:Riverside Publishing|Riverside Press]], Cambridge [Mass.]|month=March|year=1903|page=37|pageurl=https://archive.org/stream/lieutenantgovern00carriala#page/37/mode/1up|oclc=2223403|passage=I can see that would be the kind of a chap that the '''dames''' would stand for everlastingly.}}
 #* {{quote-book|author={{w|Oscar Hammerstein II}} (lyrics), {{w|Richard Rodgers}} (music)|chapter={{w|There Is Nothing Like a Dame}}|title=[[w:South Pacific (musical)|South Pacific]]|year=1949|newversion=published in|2ndauthor=Oscar Hammerstein II (lyrics); Oscar Hammerstein II and {{w|Joshua Logan}} (book); Albert Sirmay [''i.e.'', {{w|Albert Szirmai}}] (vocal score editor)|title2=South Pacific. A Musical Play. [...] Adapted from {{w|James A. Michener}}’s [...] {{w|Tales of the South Pacific}} [...]|location2=New York, N.Y.|publisher2=Williamson Music; Milwaukee, Wis.: [[w:Hal Leonard Corporation|Hal Leonard]]|year2=1949|page2=30|oclc2=497235024|passage=There is nothin' like a '''dame''' / Nothin' in the world. / There is nothin' you can name / That is anythin' like a '''dame'''.}}
 # {{lb|en|archaic}} A [[lady]], a woman.
+#* {{RQ:Whetstone Rocke of Regard|part=1|page=55|passage=Now, thou, deare '''dame''', that workſte theſe ſweete effectes in mee, / Vouchsafe my zeale, that onely ſeeke to ſerve and honour thee.}}
+#* {{quote-book|author=Edward Ravenscroft|authorlink=Edward Ravenscroft|title=Dame Dobson: Or, The Cunning Woman. A Comedy as it is Acted at the Duke’s Theatre|location=London|publisher=Printed for Joseph Hindmarsh,{{nb...|bookseller to His Royal Highness, at the Black Bull in Cornhil.}}|year=1684|section=Act I, scene xi|page=25|pageurl=https://books.google.com/books?id=UgNEAQAAMAAJ&pg=PA23|oclc=808808278|passage=And do you think my '''Dame''' ''Dobſon'' don't know a little better than you? She tells you, you need ſay no more, and 'tis an affront to her Art not to believe her; and I'le not ſee my '''Dame''' affronted.}}
 
 ====Synonyms====
 * ''See'' [[Thesaurus:woman]]
@@ -41,7 +43,7 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of 
 * Portuguese: {{t+|pt|dama|f}}
 {{trans-mid}}
 * Romanian: {{t+|ro|doamnă|f}}
-* Russian: {{t+|ru|ле́ди|f}}, {{t|ru|дейм|f|tr=dɛjm}}, {{t+|ru|да́ма|f}}
+* Russian: {{t+|ru|ле́ди|f}}, {{t|ru|дейм|f}}, {{t+|ru|да́ма|f}}
 * Serbo-Croatian: {{t+|sh|dama}}
 {{trans-bottom}}
 
