--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -16,6 +16,7 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of 
 
 # {{lb|en|Britain}} ''Usually capitalized as'' '''{{l|en|Dame}}''': a [[title#Noun|title]] [[equivalent]] to [[Sir]] for a [[female#Adjective|female]] [[knight#Noun|knight]].
 #: {{ux|en|'''Dame''' Edith Sitwell}}
+#* {{quote-book|author=Marcia Pointon|authorlink=Marcia Pointon|chapter=Something Rich and Strange|tite=Brilliant Effects: A Cultural History of Gem Stones and Jewellery|location=New Haven, Conn.; London|publisher=Published for the {{w|Paul Mellon Center for Studies in British Art}} by {{w|Yale University Press}}|year=2009|section=part 1 (Stories Touching Stones)|page=144|pageurl=https://books.google.com/books?id=fs9GAQAAIAAJ&pg=PA144|isbn=978-0-300-14278-5|passage=The cover of the modern {{smallcaps|cd}}, issued by EMI Classics with '''Dame''' {{w|Janet Baker}} and Sir {{w|John Barbirolli}} in 1965, carries a portrait of '''Dame''' Janet wearing a long coral necklace in reference to the song 'Where the Corals lie' to words by [[w:Richard Garnett (writer)|Richard Garnett]] (1835–1906).}}
 # {{lb|en|Britain}} A [[matron]] at {{w|Eton College}}.
 # {{lb|en|Britain|theater}} In [[traditional]] [[pantomime]]: a [[melodramatic]] [[female#Noun|female]] often [[play#Verb|played]] by a [[man#Noun|man]] in [[drag#Noun|drag]].
 # {{lb|en|US|dated|informal|slightly|derogatory}} A [[woman]].
@@ -24,6 +25,9 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of 
 # {{lb|en|archaic}} A [[lady]], a woman.
 #* {{RQ:Whetstone Rocke of Regard|part=1|page=55|passage=Now, thou, deare '''dame''', that workſte theſe ſweete effectes in mee, / Vouchsafe my zeale, that onely ſeeke to ſerve and honour thee.}}
 #* {{quote-book|author=Edward Ravenscroft|authorlink=Edward Ravenscroft|title=Dame Dobson: Or, The Cunning Woman. A Comedy as it is Acted at the Duke’s Theatre|location=London|publisher=Printed for Joseph Hindmarsh,{{nb...|bookseller to His Royal Highness, at the Black Bull in Cornhil.}}|year=1684|section=Act I, scene xi|page=25|pageurl=https://books.google.com/books?id=UgNEAQAAMAAJ&pg=PA23|oclc=808808278|passage=And do you think my '''Dame''' ''Dobſon'' don't know a little better than you? She tells you, you need ſay no more, and 'tis an affront to her Art not to believe her; and I'le not ſee my '''Dame''' affronted.}}
+#* {{quote-journal|author=[Nathaniel Hawthorne]|authorlink=Nathaniel Hawthorn|title=Young Goodman Brown|magazine={{w|The New-England Magazine}}|location=Boston, Mass.|publisher=E. R. Broaders,{{nb...|127, Washington Street. Eastburn’s Press.}}|month=April|year=1835|volume=VIII|page=252|pageurl=https://books.google.com/books?id=vyXZAAAAMAAJ&pg=PA252|oclc=1065920053|passage=[H]e pointed his staff at a female figure on the path, in whom goodman Brown recognized a very pious and exemplary '''dame''', who had taught him his catechism, in youth, and was still his moral and spiritual adviser, jointly with the minister and deacon Gookin.}}
+#* {{quote-book|author=Wolfgang Menzel|authorlink=Wolfgang Menzel|author2=Mrs. George Horrocks, transl.|chapter=First Period. Heathen Antiquity.|title=The History of Germany, from the Earliest Period to the Present Time. [...] Translated from the Fourth German Edition. [...] In Three Volumes|location=London|publisher=[[w:Henry George Bohn|Henry G[eorge] Bohn]],{{nb...|York Street, Covent Garden.}}|year=1849|volume=I|section=part I (Origin and Manners of the Ancient Germans), section XX (Wolen and Walkyren)|page=45|pageurl=https://books.google.com/books?id=PNo7AAAAMAAJ&pg=PA45|oclc=913051751|passage=The poetical relation between the pagan warrior and his celestial bride changed, in course of time, to that between the Christian knight and his ladye-bright, who also was not always an earthly '''dame''', but the holy Virgin or some saint.}}
+#* {{quote-book|author=Ben Jonson|authorlink=Ben Jonson|chapter=The Twelvth Night’s Revells|mainauthor=Peter Cunningham|editor=[[w:David Laing (antiquary)|David Laing]]|title={{w|Inigo Jones}} and Ben Jonson: Being the Life of Inigo Jones.{{nb...|Illustrated with Numerous Fac-similes of His Designs for Masques. And Ben Jonson’s Conversations with Drummond of Hawthornden.}}|location=London|publisher=Printed for the Shakespeare Society,{{nb...|and to be had of W. Skeffington, agent to the Society, 192, Piccadilly.}}|year=1853|page=101|pageurl=https://books.google.com/books?id=20w4AAAAIAAJ&pg=PA101|oclc=462046256|passage=[T]hough they were first-form'd '''dames''' of Earth, / And in whose sparcklinge and refulgent eyes / The glorious sonne did still delight to rise; {{...}}}}
 
 ====Synonyms====
 * ''See'' [[Thesaurus:woman]]
