--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -86,6 +86,7 @@ From {{etyl|fro|en}} {{m|fro|consumpcion}}, from {{etyl|la|en}} {{m|la|consumpti
 {{trans-bottom}}
 
 {{trans-top|wasting-away of the human body through disease}}
+* Czech: {{t+|cs|úbytě|f-p}}
 * Dutch: {{t+|nl|wegteren|n}}
 * Finnish: {{t|fi|riutuminen}}
 * German: {{t+|de|Auszehrung|f}}, {{t+|de|Konsumption|f}}, {{t|de|Konsumtion|f}}
