--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -313,6 +313,15 @@ From {{der|az|trk-pro|*at|t=horse}}.
 
 ----
 
+==Durango Nahuatl==
+
+===Noun===
+{{head|nln|noun}}
+
+# [[water]]
+
+----
+
 ==Dutch==
 
 ===Pronunciation===
