--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -62,7 +62,7 @@ Borrowed from {{bor|id|min|amai}}
 ===Verb===
 {{head|pt|verb form}}
 
-# {{pt-verb form of|amar|ar|imperative|affirmative|plural|second}}
+# {{pt-verb-form-of|amar}}
 
 ----
 
