/* Japanese */ +etym 5 kanjitab fix +etym details +etym 6 section <月#51069433>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -354,29 +354,47 @@ When used in most compounds or when counting a number of months with {{m|ja|ヶ|
 * {{ja-r|月日|げっぴ}}
 
 ===Etymology 5===
-{{ja-kanjitab|yomi=o|げつ}}
+{{ja-kanjitab|yomi=goon|がち}}
 
 {{IPAchar|/ɡʷat͡ɕi/}} → {{IPAchar|/ɡat͡ɕi/}}
 
-First attested in the {{w|Edo period}}.
+First attested in the {{w|Edo period}}. Appears to be a [[poetic]] use of the [[呉音#Japanese|goon]] reading, in reference to a [[rank]] of {{m|ja|端女郎||tr=hashi jorō|low-end [[prostitute]]}} in the {{w|Kansai}} region. According to a popular song, a ''gachi'' prostitute cost one {{m|ja|匁||tr=monme|pos=old unit of [[currency]], worth roughly 3.75 [[gram]]s of [[silver]]}}, a {{m|ja|影||tr=kage|lit=shadow}} prostitute cost two ''monme'', and a {{m|ja|汐||tr=shio|lit=tide; loveliness}} prostitute cost three ''monme''.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref><ref name="DJR">{{R:Daijirin}}</ref>
 
-{{rfe|ja|Shortened from {{m|ja|月輪|tr=gachirin||full moon, round moon}}?}}
+====Pronunciation====
+{{ja-pron|yomi=goon|がち}}
+
+====Noun====
+{{ja-noun|がち|hhira=ぐわち}}
+
+# {{lb|ja|sort=かち'|historical}} during the {{w|Edo period}}, a low [[rank]] of low-end [[prostitute]] in the {{w|Kansai}} region
+
+=====Derived terms=====
+* {{ja-r|月の女郎|がち の じょろう}}
+
+===Etymology 6===
+{{ja-kanjitab|yomi=goon|がち}}
+
+{{IPAchar|/ɡʷat͡ɕi/}} → {{IPAchar|/ɡat͡ɕi/}}
+
+Either a shift in sense from the ''low-ranking prostitute'' meaning above, or a shift in [[pronunciation]] from {{m|ja|頑痴||tr=ganchi|[[stubborn]] and [[stupid]]}}.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref><ref name="DJR">{{R:Daijirin}}</ref>
 
 ====Pronunciation====
 {{ja-pron|yomi=goon|がち}}
 
 ====Alternative forms====
-* {{s|something crude or unrefined}} {{ja-l|瓦智}}
+* {{ja-l|瓦智}} {{qualifier|[[ateji]]}}
+
+====Adjective====
+{{ja-adj|infl=na|がち|hhira=ぐわち}}
+
+# {{lb|ja|sort=かち'|archaic|possibly|_|obsolete}} [[crude]], [[unrefined]], [[hickish]]
+#: {{syn|ja|野暮|tr=yabo}}
 
 ====Noun====
 {{ja-noun|がち|hhira=ぐわち}}
 
-# {{lb|ja|sort=かち'|historical}} {{short for|lang=ja|月の女郎|tr=gachi no jorō|nodot=1}}: {{rfdef|ja|sort=かち'}}
-# something or someone that/who is [[crude]]/[[unrefined]]
+# {{lb|ja|sort=かち'|archaic|possibly|_|obsolete}} something or someone that/who is [[crude]], [[unrefined]], [[hickish]]
 #: {{syn|ja|野暮|tr=yabo}}
-
-=====Derived terms=====
-* {{ja-r|月の女郎|がち の じょろう}}
 
 ===References===
 <references/>
