--- a/en/m/myocyte.742099.wikitext
+++ b/en/m/myocyte.742099.wikitext
@@ -21,6 +21,7 @@
 ====Translations====
 {{trans-top|a single muscle fiber cell}}
 * Czech: {{t|cs|myocyt|m}}
-{{trans-mid}}
 * Hungarian: {{t|hu|izomsejt}}
+{{trans-mid}}
+* Polish: {{t|pl|miocyt|m}}
 {{trans-bottom}}
