--- a/en/u/unselfishness.742253.wikitext
+++ b/en/u/unselfishness.742253.wikitext
@@ -13,7 +13,7 @@
 * Finnish: {{t+|fi|epäitsekkyys}}
 {{trans-mid}}
 * Norwegian:
-*: Bokmål: {{t+|nb|uselviskhet|m|f}}
+*: Bokmål: {{t+|nb|uselviskhet|m|f}}, {{t|nb|uegennyttighet|m|f}}
 *: Nynorsk: {{t|nn|usjølviskheit|f}}
 * Swedish: {{t|sv|oegennytta|c}}, {{t+|sv|osjälviskhet|c}}
 {{trans-bottom}}
