--- a/en/u/unselfishness.742253.wikitext
+++ b/en/u/unselfishness.742253.wikitext
@@ -10,6 +10,7 @@
 
 ====Translations====
 {{trans-top|the state of being unselfish}}
+* Danish: {{t|da|uselviskhed|c}}
 * Finnish: {{t+|fi|epäitsekkyys}}
 {{trans-mid}}
 * Norwegian:
