--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -26,6 +26,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 #*: (''b'') sporophyte with foot reduced, the entire sporophyte enveloped by the calyptra, which is ± stipitate '''at''' the base.
 #* '''2016''', [https://web.archive.org/web/20170930001420/https://learningenglish.voanews.com/a/lets-learn-english-lesson-5-where-are-you/3168971.html VOA Learning English] (public domain)
 #*: Today my friend Marsha is '''at''' her friend's house.
+#*:: {{audio|Today my friend Marsha is at her friend's house.ogg|Audio (US)|lang=en}}
 # {{qualifier|indicating time}} {{n-g|Indicating occurrence in an instant of time or a period of time relatively short in context or from the speaker's perspective.}}
 #: {{ux|en|'''at''' six o’clock;&emsp; '''at''' closing time;&emsp; '''at''' night.}}
 #* '''1838''', ''The Family Magazine''
