--- a/en/o/Oaxacan.775472.wikitext
+++ b/en/o/Oaxacan.775472.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{suffix|en|Oaxaca|an}}
+{{calque|en|es|oaxaqueño}}. Also from {{suffix|en|Oaxaca|an}}.
 
 ===Adjective===
 {{en-adj|-}}
