--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -11,8 +11,9 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 # Someone or something that [[whistle]]s, or who plays a [[whistle]] as a musical instrument.
 # A [[bird]] that whistles (applied regionally to various specific species).
 #* {{RQ:Spenser Faerie Queene|book=II|canto=XII|passage=The lether-winged Bat, dayes enimy, / The ruefull Strich, still waiting on the bere, / The '''Whistler''' shrill, that who so heares, doth dy {{...}}}}
-# A [[whistling marmot]].
-# A [[goldeneye]].
+# The [[whistling marmot]].
+# The [[goldeneye]].
+# The [[mountain beaver]].
 # An [[audio]]-[[frequency]] [[electromagnetic wave]] produced by [[atmospheric]] [[disturbance]]s such as [[lightning]].
 # A [[broken-winded]] [[horse]].
 # {{lb|en|slang|obsolete}} The [[keeper]] of a [[whistling shop]], or [[shebeen]].
