--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -237,6 +237,7 @@ From {{der|nn|la|domina}}, via {{bor|nn|fro|dame}} and late {{inh|nn|non|damma}}
 {{nn-noun-f2}}
 
 # a {{l|en|lady}}, {{l|en|woman}}
+# {{q|romantic relationship}} a [[girlfriend]]
 # {{q|card games}} a {{l|en|queen}}
 
 ====Derived terms====
