--- a/en/h/half step.803314.wikitext
+++ b/en/h/half step.803314.wikitext
@@ -7,7 +7,7 @@
 # {{lb|en|music|US}} An [[interval]] of which there are seven in a [[fifth]] or twelve in an [[octave]], consisting of two [[tone]]s whose [[frequency]] ratio is about 1.059 or 18/17.
 
 ====Synonyms====
-(UK, Ireland, Australia, New Zealand) [[semitone]]
+* {{l|en|semitone}}
 
 ====Related terms====
 * {{l|en|whole step}}
