/* Pronunciation */ + enPR <weight#51082699>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -9,7 +9,7 @@ From {{inh|en|enm|weight}}, {{m|enm|weiȝte}}, {{m|enm|weght}}, {{m|enm|wight}},
 Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||scale}}, {{m|stq|Gewicht||weight}}, {{cog|fy|gewicht||weight}}, {{cog|nl|gewicht||weight}}, {{cog|nds-de|Wicht}}, {{m|nds-de|Gewicht||weight}} and {{cog|de|Gewicht||weight}}.
 
 ===Pronunciation===
-* {{IPA|/weɪt/|lang=en}}
+* {{enPR|wāt}}, {{IPA|/weɪt/|lang=en}}
 * {{audio|en-us-weight.ogg|Audio (US)|lang=en}}
 * {{rhymes|eɪt|lang=en}}
 * {{homophones|lang=en|wait}}
