t+it:[[non dirmi]] ([[WT:EDIT|Assisted]]) <no kidding#51084929>

--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -19,7 +19,7 @@
 * French: {{t+|fr|sans blague}}
 * German: {{qualifier|colloquial|vulgar}} {{t|de|ohne Scheiß}}, {{qualifier|colloquial}} {{t|de|im Ernst}}, {{t+|de|echt}}
 {{trans-mid}}
-* Italian: {{t+|it|sul serio}}, {{t+|it|seriamente}}, {{t|it|scherzi a parte}}, {{t|it|ma dai}}
+* Italian: {{t+|it|sul serio}}, {{t+|it|seriamente}}, {{t|it|scherzi a parte}}, {{t|it|ma dai}}, {{t|it|non dirmi}}
 * Portuguese: {{t|pt|não brinca}}
 * Russian: {{t+|ru|неуже́ли?}}
 * Spanish: {{t+|es|¿en serio?}}
