--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -34,7 +34,7 @@
 * French: {{t-needed|fr}}
 {{trans-mid}}
 * German: {{t-needed|de}}
-* Italian: {{t|it|eh si}}
+* Italian: {{t|it|eh si}}, {{t|it|eh già}}
 * Russian: {{t-needed|ru}}
 * Spanish: {{t-needed|es}}
 {{trans-bottom}}
