--- a/en/c/CFC.26242.wikitext
+++ b/en/c/CFC.26242.wikitext
@@ -1,11 +1,15 @@
 ==English==
 
+===Proper noun===
+{{en-proper noun}}
+
+# {{lb|en|soccer}} {{initialism of|{{w|Chelsea Football Club}}}}
+
 ===Initialism===
 {{rfc-header|Initialism}}
 {{head|en|initialism}}
 
 # {{lb|en|US}} Combined Federal Campaign
-# {{lb|en|soccer}} Chelsea Football Club
 # {{lb|en|business}} Controlled Foreign [[corporation|Corporation]]
 
 ===Noun===
