--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -509,17 +509,17 @@ From {{inh|osx|gem-pro|*batiz}}.
 ==Tok Pisin==
 
 ===Etymology 1===
-From {{etyl|en|tpi}} {{m|en|bed}}.
+From {{der|tpi|en|bed}}.
 
-===Noun===
+====Noun====
 {{head|tpi|noun}}
 
 # [[bed]]
 
 ===Etymology 2===
-From {{etyl|en|tpi}} {{m|en|bet}}.
+From {{der|tpi|en|bet}}.
 
-===Noun===
+====Noun====
 {{head|tpi|noun}}
 
 # {{l|en|bet}}
