--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -182,7 +182,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{trans-bottom}}
 
 ===Etymology 2===
-From {{etyl|he|en}} {{m|he|בית|tr=béyt}}
+From {{der|en|he|בית|tr=béyt}}
 
 ====Noun====
 {{en-noun|?}}
