--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -12,11 +12,9 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 ====Noun====
 {{en-noun}}
 
-# {{senseid|en|wager}} A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner (the winner being the one who correctly forecast the outcome of an event).
-#: ''Dylan owes Fletcher $30 from an unsuccessful '''bet'''.''
-# A degree of [[certainty]].
-#: ''It’s a safe '''bet''' that it will rain tomorrow.''
-#: ''It’s an even '''bet''' that Jim will come top of the maths test tomorrow.''
+# {{senseid|en|wager}} A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner (the winner being the one who correctly forecast the outcome of an event
+
+I bet Roy won't reply to my message after 10pm. He's working tomorrow. I'll give up G-had for a month if he does
 
 =====Translations=====
 {{trans-top|a wager}}
