t+ka:[[სტვენა]] t+lt:[[švilpti]] t+et:[[vilistama]] t-balance t+mn:[[исгэрэх]] t+mt:[[saffar]] t+ar:[[صفر]] t+ms:[[siul]] t+ms:[[bersiul]] t+fa:[[سوت زدن]] t+fa:[[سوت]] t+be:[[свіст]] t+pl:[[gwizd]] t+pl:[[świst]] t+bn:[[সিটি মারা]] t+bn:[[সিটি বাজান]] ([[WT:EDIT|Assisted]]) <whistle#51091624>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -114,6 +114,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 
 {{trans-top|act of whistling}}
 * Asturian: {{t|ast|xiblíu|m}}, {{t|ast|xiblida|f}}
+* Belarusian: {{t|be|свіст|m}}
 * Catalan: {{t+|ca|xiulo|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t+|cmn|口笛|tr=kǒudí|sc=Hani}}
@@ -130,6 +131,8 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 {{trans-mid}}
 * Korean: {{t+|ko|호루라기}}
 * Latvian: {{t|lv|svilpošana|f}}
+* Persian: {{t+|fa|سوت|tr=sut}}
+* Polish: {{t+|pl|gwizd|m}}, {{t+|pl|świst|m}}
 * Portuguese: {{t|pt|apitada|f}} {{qualifier|with a whistle}}, {{t|pt|assoviada}}, {{t|pt|assobiada}} {{qualifier|with one’s mouth}}
 * Romanian: {{t|ro|fluierare|f}}, {{t+|ro|fluierat|n}}, {{t|ro|fluierătură|f}}
 * Russian: {{t+|ru|свист|m}}, {{t+|ru|свисто́к|m}}
@@ -237,12 +240,14 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 ====Translations====
 {{trans-top|to produce a whistling sound}}
 * Albanian: {{t+|sq|vërshëllej}}, {{t+|sq|fishkëllej}}
+* Arabic: {{t+|ar|صَفَرَ}}, {{t+|ar|صَفَّرَ}}
 * Armenian: {{t+|hy|սուլել}}, {{t+|hy|շվացնել}}
 * Aromanian: {{t|rup|shuir}}, {{t|rup|fluir}}
 * Asturian: {{t|ast|xiblar}}
 * Azerbaijani: {{t|az|fışdırıq çalmaq}}
 * Basque: {{t-needed|eu}}
 * Belarusian: {{t|be|свіста́ць|impf|sc=Cyrl}}
+* Bengali: {{t|bn|সিটি মারা}}, {{t|bn|সিটি বাজান}}
 * Breton: {{t+|br|c'hwitellat}}
 * Bulgarian: {{t+|bg|сви́ркам|impf|sc=Cyrl}}
 * Burmese: {{t+|my|လေချွန်}}
@@ -257,12 +262,12 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Danish: {{t+|da|fløjte}}, {{t|da|hvisle}}
 * Dutch: {{t+|nl|fluiten}}
 * Esperanto: {{t+|eo|fajfi}}
-* Estonian: {{t-needed|et}}
+* Estonian: {{t|et|vilistama}}
 * Finnish: {{t+|fi|viheltää}}
 * French: {{t+|fr|siffler}}
 * Friulian: {{t|fur|šivîlâ}}
 * Galician: {{t+|gl|asubiar}}, {{t|gl|pitar}}, {{t|gl|chifrar}}
-* Georgian: {{t-needed|ka}}
+* Georgian: {{t|ka|სტვენა}}
 * German: {{t+|de|pfeifen}}, {{t+|de|flöten}}
 * Greek: {{t+|el|σφυρίζω}}
 *: Ancient: {{t|grc|συρίζω}}
@@ -285,16 +290,18 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Kyrgyz: {{t+|ky|ышкыруу}}
 * Lao: {{t|lo|ຖິວ}}, {{t|lo|ຖິວປາກ}}, {{t|lo|ຜິວ}}
 * Latvian: {{t|lv|svilpt}}
+* Lithuanian: {{t|lt|švilpti}}
 * Luxembourgish: {{t|lb|päifen}}
 * Macedonian: {{t|mk|свири|impf|sc=Cyrl}}, {{t|mk|свирка|impf|sc=Cyrl}}
-* Malay: {{t-needed|ms}}
-* Maltese: {{t-needed|mt}}
+* Malay: {{t|ms|siul}}, {{t|ms|bersiul}}
+* Maltese: {{t|mt|saffar}}
 * Maori: {{t|mi|whio}}, {{t|mi|rorowhio}} {{qualifier|by the wind}}
-* Mongolian: {{t-needed|mn}}
+* Mongolian: {{t+|mn|исгэрэх}}
 * Nepali: {{t-needed|ne}}
 * Norman: {{t|nrf|sûfflier}}
 * Norwegian: {{t|no|plystre}}
 * Occitan: {{t+|oc|siblar}}, {{t+|oc|fiular}}
+* Persian: {{t+|fa|سوت زدن|tr=sut zadan}}
 * Pitjantjatjara: {{t|pjt|utinmananyi}}
 * Polish: {{t+|pl|gwizdać|impf}}, {{t|pl|świstać|impf}}
 * Portuguese: {{t+|pt|assobiar}} {{qualifier|with one’s mouth}}, {{t+|pt|assoviar}} {{qualifier|with one’s mouth}}, {{t+|pt|apitar}} {{qualifier|with a whistle}}
