--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -17,7 +17,7 @@
 # The form of the English language that is chiefly used in [[North America]], contrasted with [[British English]] and that of other places.
 
 ====Synonyms====
-* {{l|en|AmE}}, {{l|en|AE}}, {{l|en|AmEng}}
+* {{l|en|AmE}}, {{l|en|AE}}, {{l|en|AmEng}}, {{l|en|Americanese}}
 * {{sense|English of North America}} {{l|en|North American English}} ({{l|en|NAmE}}, {{l|en|NAE}})
 * {{sense|English of the USA}} {{l|en|United States English}} ({{l|en|USEng}}, {{l|en|en-US}})
 
