--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -183,6 +183,7 @@ From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|e
 * Southern Sami: {{t|sma|åeruve}}
 * Spanish: {{t+|es|ardilla|f}}
 * Sranan Tongo: {{t|srn|ekosi}}
+* Sudovian: {{t|xsv|vevare|f}}
 * Sundanese: {{t+|su|bajing}}
 * Swahili: {{qualifier|nc 9/10}} {{t-check|sw|kindi}}
 * Swedish: {{t+|sv|ekorre|c}}
