--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -273,6 +273,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 *: Ancient: {{t|grc|συρίζω}}
 * Gujarati: {{t-needed|gu}}
 * Hawaiian: {{t-needed|haw}}
+* Hebrew: {{t|he|שָׁרַק|tr=sharák}}
 * Hindi: {{t|hi|सीटी देना}}
 * Hungarian: {{t+|hu|fütyül}}
 * Icelandic: {{t+|is|flauta}}
@@ -284,8 +285,8 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Japanese: {{t|ja|[[口笛]][[を]][[吹く]]|tr=くちぶえをふく, kuchibue o fuku}}
 * Kabuverdianu: {{t|kea|zibia}}
 * Kazakh: {{t|kk|ысқыру}}
-{{trans-mid}}
 * Khmer: {{t+|km|ហួច|tr=houch|sc=Khmr}}
+{{trans-mid}}
 * Korean: {{t|ko|[[휘파람]][[을]] [[불다]]}}
 * Kyrgyz: {{t+|ky|ышкыруу}}
 * Lao: {{t|lo|ຖິວ}}, {{t|lo|ຖິວປາກ}}, {{t|lo|ຜິວ}}
@@ -320,10 +321,11 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Swedish: {{t+|sv|vissla}}
 * Tajik: {{t|tg|ҳуштак кашидан}}
 * Thai: {{t+|th|ผิวปาก}}, {{t|th|เป่าปาก}}
-* Tibetan: {{t|bo|ཤུ་བརྒྱབ}}
+* Tibetan: {{t|bo|ཤུ་བརྒྱབ}}, {{t|bo|ཤུ་རྒྱག}}
 * Turkish: {{t+|tr|ıslık çalmak}}
 * Turkmen: {{t|tk|sygyrmak}}, {{t|tk|çyrryldamak}}
 * Ukrainian: {{t|uk|свисті́ти|impf|sc=Cyrl}}, {{t|uk|сюрча́ти|impf|sc=Cyrl}}
+* Uyghur: {{t|ug|ئۈشتەك چالماق}}, {{t|ug|غوڭۇلدىماق}}
 * Uzbek: {{t|uz|hushtak chalmoq}}
 * Vietnamese: {{t+|vi|huýt}}, {{t|vi|huýt sáo}}, {{t+|vi|huýt gió}}
 * Vilamovian: {{t|wym|wyspułn}}
