--- a/en/v/vectorial.855963.wikitext
+++ b/en/v/vectorial.855963.wikitext
@@ -6,7 +6,7 @@
 ===Adjective===
 {{en-adj|-}}
 
-# {{lb|en|mathematics}} Of or pertaining to a [[vector]]
+# {{lb|en|mathematics}} Of or pertaining to a [[vector]].
 # {{lb|en|biochemistry}} In the [[electron transport chain]], being or relating to a type of enzyme-mediated reaction that moves protons in a specific direction (from the matrix into the inter-membrane space in this example).
 
 ====Translations====
