--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -34,6 +34,7 @@
 * Irish: {{t|ga|eangach ghruaige|f}}, {{t|ga|líontán gruaige|m}}
 * Italian: {{t+|it|retina}}
 * Japanese: {{t+|ja|コール|tr=kōru|sc=Jpan}}, {{t|ja|ヘアネット|tr=heanetto|sc=Jpan}}
+* Old English: {{t|ang|feaxnett|n}}
 * Portuguese: [[rede]] para os [[cabelos]] {{g|f}}
 * Russian: {{t+|ru|се́тка|f}} {{qualifier|для воло́с}}
 * Spanish: {{t+|es|redecilla|f}}
