t+sk:[[za]] ([[WT:EDIT|Assisted]]) <at#51106337>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -245,6 +245,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * French: {{t+|fr|à}}
 {{trans-mid}}
 * Korean: {{t+|ko|에|alt=...에}}
+* Slovak: {{t+|sk|za}}
 * Spanish: {{t+|es|a}}
 * Swedish: {{t+|sv|för}}, {{t+|sv|à}} {{q|each}}
 {{trans-bottom}}
