--- a/en/p/palet.803129.wikitext
+++ b/en/p/palet.803129.wikitext
@@ -59,7 +59,7 @@ Borrowed from {{bor|hif|en|plate}}.
 
 ==Middle English==
 
-===Noun===
+===sumes===
 {{head|enm|noun}}
 
 # {{alt form|lang=enm|palate}}
