t+az:[[bir daha]] ([[WT:EDIT|Assisted]]) <again#51113394>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -105,7 +105,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Assamese: {{t|as|আকৌ}}
 * Asturian: {{t|ast|otra vez}}, {{t|ast|otra vegada}}, {{t|ast|de nuevo}}
 * Avar: {{t|av|жеги}}
-* Azerbaijani: {{t|az|yenidən}}, {{t|az|yenə}}
+* Azerbaijani: {{t|az|yenidən}}, {{t|az|yenə}}, {{t|az|bir daha}}
 * Bashkir: {{t|ba|тағы ла}}, {{t|ba|тағы берҙе}}, {{t|ba|йәнә}}
 * Basque: {{t|eu|berriro}}
 * Belarusian: {{t|be|зноў}}, {{t|be|яшчэ́ раз}}
