/* Noun */ # The act of putting on ceremonial clothing. <robing#51113489>

--- a/en/r/robing.720156.wikitext
+++ b/en/r/robing.720156.wikitext
@@ -8,6 +8,7 @@
 ===Noun===
 {{en-noun|~}}
 
+# The act of putting on ceremonial clothing.
 # {{lb|en|historical|usually plural}} The [[trimming]]s around the [[neck]] and [[bodice]] of a [[gown]].
 
 ===Anagrams===
