--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -144,7 +144,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 {{trans-mid}}
 * Luxembourgish: {{t|lb|Kanéngchen|f}}
 * Lü: {{t|khb|ᦂᦎᦻᧈ|sc=Talu}}
-* Macedonian: {{t|mk|заjак|m}}
+* Macedonian: {{t|mk|зајак|m}}
 * Malay: {{t+|ms|arnab}}, {{t|ms|kelinci}}, {{t|ms|kucing belanda}}, {{t|ms|kuilu}}, {{t|ms|terwelu}}
 *: Jawi: {{t|ms|ارنب|sc=Arab}}, {{t|ms|کلينچي|sc=Arab}}, {{t|ms|کوچيڠ بلندا|sc=Arab}}, {{t|ms|کويلو|sc=Arab}}, {{t|ms|ترويلو|sc=Arab}}
 * Malayalam: {{t|ml|മുയല്‍}}
