--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -112,7 +112,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Greenlandic: {{t|kl|kaniina}}, {{t|kl|ukalinnguaq}}
 * Gujarati: {{t|gu|સસલું|tr=sasluṃ}}
 * Hebrew: {{t+|he|אַרְנָב|m|tr=arnáv}}, {{t+|he|אַרְנֶבֶת|f|tr=arnévet}}
-* Hindi: {{t|hi|ख़रगोश|m|sc=Deva}}, {{t+|hi|शशक|m|sc=Deva}}, {{t|hi|सुस्सा|tr=sussA|sc=Deva}}, {{t+|hi|खरहा|tr=kharhaa|sc=Deva}}
+* Hindi: {{t|hi|ख़रगोश|m|sc=Deva}}, {{t+|hi|शशक|m|sc=Deva}}, {{t|hi|सुस्सा|tr=sussā|sc=Deva}}, {{t+|hi|खरहा|tr=kharhā|sc=Deva}}
 * Hopi: {{t|hop|taavo}}
 * Hungarian: {{t+|hu|hazinyúl}}
 * Icelandic: {{t+|is|kanína}}
