--- a/en/d/Dinkel.803423.wikitext
+++ b/en/d/Dinkel.803423.wikitext
@@ -1,16 +1,25 @@
 ==German==
-{{wikipedia|lang=de}}
+[[File:Spelt.jpg|thumb]]
+
 ===Etymology===
-From {{der|de|gmh|dinkel}}, from {{der|de|goh|dinchel}}.
+From {{inh|de|gmh|dinkel}}, from {{inh|de|goh|dinchel}}, further origin unknown.
 
 ===Pronunciation===
 * {{audio|De-Dinkel.ogg|Audio|lang=de}}
 
 ===Noun===
 {{de-noun|m|Dinkels|Dinkel}}
-# [[spelt#Etymology_2|spelt]], ''[[Triticum spelta]]''
+
+# [[spelt]] {{gloss|a type of wheat, {{m|mul|Triticum spelta}}}}
+#: {{syn|de|Spelt|Spelz}}
+
+====Derived terms====
+* {{l|de|Dinkelbrot}}
+* {{l|de|Sommerdinkel}}
+* {{l|de|Winterdinkel}}
 
 ===Further reading===
+* {{pedia|lang=de}}
 * {{R:Duden}}
 
 [[Category:de:Grains]]
