--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -137,7 +137,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Interlingue: {{t|ie|bul}}
 * Irish: {{t|ga|boilgeog|f}}
 * Italian: {{t+|it|bolla|f}}
-* Japanese: {{t+|ja|泡|tr=あわ, awa|sc=Jpan}}, {{t+|ja|泡立つ|tr=あわだつ, awadatsu|sc=Jpan}}, {{t+|ja|バブル|tr=baburu|sc=Jpan}}
+* Japanese: {{t+|ja|泡|tr=あわ, awa|sc=Jpan}}, {{t+|ja|泡立つ|tr=あわだつ, awadatsu|sc=Jpan}}
 * Kannada: {{t+|kn|ಮರಳು|sc=Knda}}
 * Kazakh: {{t|kk|көбік|sc=Cyrl}}
 * Khmer: {{t|km|ពងទឹក|tr=pɔɔng tɨk|sc=Khmr}}
