--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -427,8 +427,7 @@ Either a shift in sense from the ''low-ranking prostitute'' meaning above, or a 
 #: {{syn|ja|野暮|tr=yabo}}
 
 ===References===
-<references/>
-: {{ja-kref
+{{ja-kref
 |ku=2378
 |shift=8c8e
 |jis=376E
@@ -440,6 +439,8 @@ Either a shift in sense from the ''low-ranking prostitute'' meaning above, or a 
 |kld=1876
 |heisig=13
 |tuttle=4b0.1}}
+
+<references/>
 
 [[Category:Japanese basic words|つき]]
 [[Category:ja:Astronomy|つき]]
