--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -38,6 +38,7 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 ** Latin: {{l|la|Isrāēl}}
 *** English: {{l|en|Israel}}
 *** German: {{l|de|Israel}}
+** Russian: {{l|ru|Израиль}}
 
 ===References===
 * {{cite-book|last=Sachsse|first=Eduard|title=Die Bedeutung des Namens Israel. Eine quellen-kritische Untersuchung|publisher=Carl Georgi, Universitäts-Buchdruckerei und Verlag|location=Bonn|year=1910|lang=de|trans-title=The meaning of the name Israel. A source-critical investigation.|url=https://sammlungen.ub.uni-frankfurt.de/freimann/content/titleinfo/1282767}}
