--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -33,6 +33,8 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 * French: {{t+|fr|quadrupède|m}}, {{t+|fr|tétrapode|m}}
 * Galician: {{t|gl|cuadrúpede|m}}
 * German: {{t|de|Vierfüßer|m}}, {{t|de|Vierfüßerin|f}}, {{t|de|Vierfüßler|m}}, {{t|de|Vierfüßlerin|f}}, {{t|de|Quadrupeder|m}}, {{t|de|Quadrupede|f}}
+* Greek:
+*: Ancient: {{t|grc|τεττράπουν|n}}
 * Icelandic: {{t|is|ferfætlingur|m}}
 * Japanese: {{t|ja|四肢動物|tr=ししどうぶつ, shishi dōbutsu}}
 * Maori: {{t|mi|kīrehe}}
