--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -25,6 +25,7 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 ====Translations====
 {{trans-top|a four-footed or four-legged animal}}
 * Armenian: {{t+|hy|չորքոտանի}}
+* Belarusian: {{t-needed|be}}
 * Chinese:
 *: Mandarin: {{t|cmn|四足動物}}, {{t|cmn|四足动物|tr=sìzú dòngwù}} {{qualifier|animal}}, {{t|cmn|四足類}}, {{t|cmn|四足类|tr=sìzúlèi}}
 * Danish: {{t|da|[[firbenet]] [[dyr]]}}
