--- a/en/l/LDPE.26240.wikitext
+++ b/en/l/LDPE.26240.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun|-}}
 
-# {{lb|en|organic compound}} {{initialism of|low-density [[polyethylene]]}}
+# {{lb|en|organic compound}} {{initialism of|lang=en|low-density [[polyethylene]]}}
 
 ====References====
 * Bashford, David. [http://books.google.com/books?id=ycLq-EYaE0QC&dq=a.+schulman&source=gbs_navlinks_s Thermoplastics: Directory and databook]; {{ISBN|9780412733505}}. London: Chapman & Hall, 1997.
