--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -243,7 +243,7 @@ Likely a shift from ''tsuku'' (see below), derived through a fusion with ancient
 * {{ja-r|月を跨ぐ|つき を またぐ}}
 * {{ja-r|有明の月|ありあけ の つき|moon when it is still [[visible]] after the [[sun]] has [[rise]]n}}
 * {{ja-r|祝%月|いわい%づき|rom=-}}, {{ja-r|斎%月|いわい%づき}}
-* {{ja-r|五月|さつき|rom=-}}, {{ja-r|早%月|さ%つき|rom=-}}, {{ja-r|皐月|さつき}}
+* {{ja-r|五%月|さ%つき|rom=-}}, {{ja-r|早%月|さ%つき|rom=-}}, {{ja-r|皐%月|さ%つき}}
 * {{ja-r|卯%月|う%づき}}
 * {{ja-r|産み月|うみづき}}
 * {{ja-r|神%去り月|かみ%さりづき}}
@@ -262,7 +262,7 @@ Likely a shift from ''tsuku'' (see below), derived through a fusion with ancient
 * {{ja-r|毎月|まいつき|[[every]] month}}
 * {{ja-r|三日%月|みか%づき|crescent moon}}
 * {{ja-r|水無%月|みな%づき}}
-* {{ja-r|睦月|むつき}}
+* {{ja-r|睦%月|む%つき}}
 * {{ja-r|望月|もちづき}}
 * {{ja-r|夕月|ゆうづき}}
 {{der-bottom}}
