--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -222,6 +222,8 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 # {{lb|en|ambitransitive}} To make a shrill, high-pitched sound by forcing air through the mouth. To produce a whistling sound, restrictions to the flow of air are created using the teeth, tongue and lips.
 #: ''Never '''whistle''' at a funeral.''
 #: ''She was '''whistling''' a happy tune.''
+# {{lb|en|ambitransitive}} To make a similar sound by forcing air through a musical instrument or a pipe etc.
+#: ''The stream train '''whistled''' as it passed by.''
 # {{lb|en|intransitive}} To move in such a way as to create a whistling sound.
 #: ''A bullet '''whistled''' past.''
 # {{lb|en|transitive}} To send, signal, or call by a whistle.
