--- a/en/d/DWB.741869.wikitext
+++ b/en/d/DWB.741869.wikitext
@@ -19,7 +19,10 @@
 ==German==
 {{wikipedia|lang=de}}
 
+===Alternative forms===
+* {{l|de|DWb}}
+
 ===Proper noun===
 {{head|de|proper noun}}
 
-# {{io|lang=nl|[[Deutsches]] [[Wörterbuch]] der [[Brüder]] [[Grimm]]|dot=}}; the largest dictionary of the German language.
+# {{io|lang=de|[[deutsch|Deutsches]] [[Wörterbuch]]|dot=}}; the largest dictionary of the German language.
