t+mi:[[kohe]] ([[WT:EDIT|Assisted]]) <rot#51155246>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -125,6 +125,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 
 {{trans-top|verbal nonsense}}
 {{trans-mid}}
+* Maori: {{t|mi|kohe }}
 {{trans-bottom}}
 
 ===Anagrams===
